# restream

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  REWRITE-STATUS.md  build.rs  codecov.yml  db.js  deny.toml  docker-compose.yml  embed.go  go.mod  go.sum  index.js  input.css  mediamtx.yml  package-lock.json  package.json  playwright.config.ts  restream.json  restream_platform_master_plan.md  restream_platform_operational_addendum.md  tsconfig.frontend-node-test.json  tsconfig.json
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  sbom-security.yml
benches/: alert_tracker.rs  avio_throughput.rs  codec_conversions.rs  high_performance_data_path.rs  hls_cost.rs  matrix_throughput.rs  packet_remux.rs  ring_buffer.rs  simd_alternatives.rs  simd_memcpy.rs  simd_search.rs  srt_ingest_latency.rs  stage_feeder.rs  stage_metrics.rs  transcoder_throughput.rs
cmd/server/: main.go
docs/: agent-plane-integration.md  api-reference.md  architecture.md  backend-services.md  concurrency-proof-coverage-2026-07-02.md  concurrency-proofing.md  configuration.md  current-priorities.md  deployment-host.md  development.md  diagnostics.md  end-to-end-testing.md  ffmpeg-versions.md  frontend-modules.md  health-mapping.md  high-performance-data-path.md  improvements.md  layering-roadmap.md  logging.md  mcp-rust-architecture.md  media-pipeline-stage-design.md  media-pipeline.md  mediamtx-control-api-monitoring.md  observability.md  onboarding.md  parallel-agent-framework.md  protocol-correctness-notes.md  resource-sweep.md  run-to-completion-analysis.md  rust-layering-roadmap.md  test-audit-20260628.md  testing-results-2026-06-20.md  testing-strategy.md  testing.md  thread-model.md
infra/: mediamtx.service  mediamtx.yml  restream.service
internal/api/: config.go  decode.go  encodings.go  helpers.go  metrics.go  metrics_linux.go  outputs.go  pipelines.go  preview.go
internal/apputils/: app.go  log.go
internal/db/: db.go  schema.go
internal/etag/: etag.go
internal/ffmpeg/: ffmpeg.go
internal/progress/: progress.go
internal/services/: bootstrap.go  health.go  outputs.go
models/: model.js
monitoring/: docker-compose.yml
old/: mediamtx.yml  package-lock.json
old/monitoring/: docker-compose.yml  prometheus.yml
old/scripts/: server-update.sh
old/test/: nginx-rtmp.conf
patches/: README.md
patches/mediamtx/: mediamtx_dts_preservation_v1.17.1.patch  mediamtx_push_targets_v1.17.1.patch  mediamtx_srt_buffer_v1.17.1.patch  mediamtx_srt_global_latency_v1.17.1.patch
public/: api.js  base-path.js  dashboard.js  index.html  input.css  login.html  output.css  pipeline.js  render.js  settings.html  status.html  stream-keys.html  stream-keys.js  utils.js
public/js/: client.js  history.js  pipeline.js  utils.js
public/mobile/: dashboard.html  keys.html  mobile.css
public/ts/: global.d.ts  types.ts
sbom/: restream-runtime.cdx.json
scripts/: agent-worktree.sh  bootstrap-dev.sh  build-bench-harness.sh  build-lock  build-native.sh  build-static.sh  build.sh  cargo-mem-limit  check-api-contract.sh  check-api-drift.mjs  check-concurrency-contract.sh  check-concurrency-proof-fast.sh  check-debian-binaries.sh  check-fixture-discipline.sh  check-history-grouping.sh  check-test-hygiene.sh  concurrency-proof-common.sh  deploy.sh  down.sh  ensure-frontend-assets.mjs  generate-bench-fixtures.sh  install-git-hooks.sh  install-system.sh  mbedtls-config-srt.h  resource-limit  run-container.sh  run-frontend-browser-dom-tests.mjs  run-frontend-node-tests.sh  run-host.sh  run-loom-target.sh  server-down.sh  server-reset-password.sh  server-setup.sh  server-update.sh  setup-static-build.sh  test-srt-bonding.sh  up.sh
src/: agent_execution.rs  agent_plane.rs  alerts.rs  api.rs  api_runtime_views.rs  api_view_models.rs  bootstrap.js  config.js  db.js  db.rs  diag.rs  events.rs  ffmpeg_extract.rs  health-compute.js  health.js  http.js  index.js  index.ts  lib.rs  logging.rs  main.rs  outputs.js  pipeline-runtime-state.js  preview.js  recovery-helpers.js  recovery.js  routes-output.js  routes-pipeline.js  runtime_info.rs  test_fixtures.rs  types.rs  types.ts  utils.js
src/agent_backends/: http.rs  in_process.rs  mod.rs
src/agent_core/: audit.rs  backend.rs  errors.rs  mod.rs  types.rs  workflows.rs
src/agent_mcp/: auth.rs  handlers.rs  mod.rs  tools.rs  transport.rs
src/api/: config.js  config.ts  diagnostics.ts  encodings.js  grafana.ts  metrics.js  metrics.ts  outputs.js  (+8 more)
test/: browser-dom-harness.html  ffmpeg-capabilities.c  frontend-api-contract.test.mjs  frontend-browser-dom.spec.ts  frontend-build-smoke.test.mjs  frontend-chaos-scenarios.test.mjs  frontend-core-helpers.test.mjs  frontend-dashboard-contract.test.mjs  frontend-dom-render-bench.mjs  frontend-dom-render.test.mjs  frontend-history-helpers.test.mjs  frontend-history-stream.test.mjs  frontend-output-scenarios.test.mjs  frontend-overview-activity-stream.test.mjs  frontend-pipeline-info-scenarios.test.mjs  frontend-publisher-health-contract.test.mjs  frontend-status-stream.test.mjs  history-nearby-render.test.mjs  history-render-bench.mjs  history-render.spec.ts  hls-player.spec.ts  mediamtx-sink.yml  network-profiles.js  nginx-rtmp.conf  overview-activity-render.test.mjs  run-2x3-matrix.sh  run-2x3.sh  run-bitrate-scale-test.py  run-hevc-load.sh  run-in-netns.sh  run-integration.sh  run-media-validation.sh  run-mixed-scale-test.sh  run-protocol-matrix.sh  run-resource-sweep.py  run-scale-test.sh  smoke-external-transcoder.sh  srt-bond-client.c  srt-bond-server.c
tests/: api.rs  av_sync.rs  avio_loom.rs  codec.rs  db.rs  fixtures.rs  output_status_contract.rs  ring_migration.proptest-regressions  ring_migration.rs  ring_migration_loom.rs  transcoder.rs  transcoder_stage_loom.rs  ts_chunk_ring_loom.rs  ts_muxer_stage_loom.rs
ui/: api.js  dashboard.js  index.html  input.css  output.css  pipeline.js  render.js  restream.toml  script.js  stream-keys.html  stream-keys.js  test.html  thast.html  tools.js  utils.js
v2/: PRD.md  RFC.md
(+257 files in other folders)
