[package]
name = "restream"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-full", "set-header"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.12"
sysinfo = "0.30"
bcrypt = "0.15"
libc = "0.2"
nix = { version = "0.27", features = ["socket", "sched", "fs", "feature"] }
futures-util = "0.3"
home = "=0.5.9"
scrypt = { version = "0.11", features = ["simple"] }
rand = "0.8"
sha2 = "0.10"
ffmpeg-next = { version = "8.0", default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
rml_rtmp = "0.8.0"
arc-swap = "1"
memchr = "2.7"
tokio-stream = "0.1"
rust-embed = "8"
tokio-rustls = "0.24"
webpki-roots = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }


[build-dependencies]
pkg-config = "0.3"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
memchr = "2.7"
pulp = { version = "0.22", features = ["x86-v4"] }
wide = "1.5"

[[bench]]
name = "simd_alternatives"
harness = false

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "transcoder_throughput"
harness = false

[[bench]]
name = "avio_throughput"
harness = false

[[bench]]
name = "high_performance_data_path"
harness = false

[[bench]]
name = "hls_cost"
harness = false

[[bench]]
name = "matrix_throughput"
harness = false

[[bench]]
name = "srt_ingest_latency"
harness = false

[[bench]]
name = "codec_conversions"
harness = false

[[bench]]
name = "stage_metrics"
harness = false

[profile.dev]
incremental = true
codegen-units = 16
debug = 1
# Avoid packaging DWARF into a single blob — unpacked is cheaper to write and
# the linker (mold) doesn't need to open it during linking.
split-debuginfo = "unpacked"

# Compile every dependency at opt-level 2 so they are fast to execute (and stay
# cached across rebuilds). Our own crate stays at opt-level 0 for maximum
# incremental compile speed — only changed translation units are recompiled.
[profile.dev.package."*"]
opt-level = 2

# bench-dev: runs Criterion at full optimization without fat-LTO.
# Use:  cargo bench --bench <name> --profile bench-dev
# Much faster to build than the default `bench` profile (which inherits release
# and uses fat LTO + 1 codegen unit). Accuracy is equivalent for relative
# comparisons; absolute ns values may differ ≤5% from full release.
[profile.bench-dev]
inherits = "dev"
opt-level = 3
lto = "thin"
incremental = true
# Keep debug symbols so flamegraphs and perf work without a separate build.
debug = 1
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "unwind"

[profile.fast-release]
inherits = "release"
lto = "thin"
codegen-units = 16
