[package]
name = "restream"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
agent-plane = []
agent-execution = ["agent-plane"]

[dependencies]
tokio = { version = "1.35", features = [
    "fs", "io-util", "macros", "net", "process",
    "rt-multi-thread", "signal", "sync", "time", "test-util",
] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors", "set-header", "compression-gzip"] }
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio", "macros"] }
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.12"
sysinfo = "0.30"
bcrypt = "0.15"
libc = "0.2"
nix = { version = "0.27", features = ["socket", "sched", "fs", "feature"] }
futures-util = "0.3"
home = "=0.5.9"
scrypt = { version = "0.11", features = ["simple"] }
rand = "0.8"
sha2 = "0.10"
ffmpeg-next = { version = "8.0", default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
rml_rtmp = "0.8.0"
arc-swap = "1"
memchr = "2.7"
tokio-stream = "0.1"
rust-embed = "8"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
webpki-roots = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = { version = "0.1", features = ["max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

[build-dependencies]
pkg-config = "0.3"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
memchr = "2.7"
pulp = { version = "0.22", features = ["x86-v4"] }
wide = "1.5"
proptest = "1"
loom = { version = "0.7", features = ["checkpoint"] }

[[bench]]
name = "simd_alternatives"
harness = false

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "transcoder_throughput"
harness = false

[[bench]]
name = "avio_throughput"
harness = false

[[bench]]
name = "high_performance_data_path"
harness = false

[[bench]]
name = "hls_cost"
harness = false

[[bench]]
name = "matrix_throughput"
harness = false

[[bench]]
name = "srt_ingest_latency"
harness = false

[[bench]]
name = "codec_conversions"
harness = false

[[bench]]
name = "stage_metrics"
harness = false

[[bench]]
name = "alert_tracker"
harness = false

[[bench]]
name = "stage_feeder"
harness = false

[profile.dev]
incremental = true
codegen-units = 16
debug = 1
# Avoid packaging DWARF into a single blob — unpacked is cheaper to write and
# the linker (mold) doesn't need to open it during linking.
split-debuginfo = "unpacked"

# Compile every dependency at opt-level 2 so they are fast to execute (and stay
# cached across rebuilds). Our own crate stays at opt-level 0 for maximum
# incremental compile speed — only changed translation units are recompiled.
[profile.dev.package."*"]
opt-level = 1

# Local benchmarks: fast incremental builds, debug symbols for flamegraphs.
# Accuracy is equivalent for relative comparisons; absolute ns values may
# differ ≤5% from full release.  CI uses --profile release for absolute numbers.
[profile.bench]
opt-level = 3
lto = "thin"
incremental = true
debug = 1
split-debuginfo = "unpacked"
codegen-units = 16

# Strip debug + trace at compile time in release/bench profiles so those call
# sites become dead code and the optimizer removes them entirely.
[profile.release.package.tracing]
features = ["release_max_level_info"]

[profile.bench.package.tracing]
features = ["release_max_level_info"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
debug = 1
split-debuginfo = "unpacked"
panic = "unwind"
